Integrate Resume Analyzer Functionality into Website

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#how-it-works" class="nav-link">How It Works</a>
                 <a href="#demo" class="nav-link">Demo</a>
-                <a href="https://iqresume.streamlit.app/" target="_blank" class="nav-cta">Try Now</a>
+                <a href="analyzer.html" class="nav-cta">Try Now</a>
             </div>
             <div class="hamburger">
                 <span></span>
@@ -48,7 +48,7 @@
                     Advanced machine learning algorithms analyze your resume content and predict the most suitable job category. Upload your resume and get instant insights powered by cutting-edge AI technology.
                 </p>
                 <div class="hero-buttons">
-                    <a href="https://iqresume.streamlit.app/" target="_blank" class="btn-primary">
+                    <a href="analyzer.html" class="btn-primary">
                         <i class="fas fa-rocket"></i>
                         Try IQ Resume Now
                     </a>
@@ -227,7 +227,7 @@
                             <span>Instant category prediction</span>
                         </div>
                     </div>
-                    <a href="https://iqresume.streamlit.app/" target="_blank" class="btn-primary">
+                    <a href="analyzer.html" class="btn-primary">
                         <i class="fas fa-external-link-alt"></i>
                         Launch Application
                     </a>
@@ -263,7 +263,7 @@
             <div class="cta-content">
                 <h2>Ready to Analyze Your Resume?</h2>
                 <p>Join thousands of professionals who have discovered their ideal job categories with IQ Resume</p>
-                <a href="https://iqresume.streamlit.app/" target="_blank" class="btn-primary large">
+                <a href="analyzer.html" class="btn-primary large">
                     <i class="fas fa-rocket"></i>
                     Get Started Now - It's Free
                 </a>
@@ -287,7 +287,7 @@
                         <h4>Product</h4>
                         <a href="#features">Features</a>
                         <a href="#how-it-works">How It Works</a>
-                        <a href="https://iqresume.streamlit.app/" target="_blank">Try Now</a>
+                        <a href="analyzer.html">Try Now</a>
                     </div>
                     <div class="footer-section">
                         <h4>Technology</h4>
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 IQ Resume. Built with ❤️ using Python & Streamlit</p>
+                <p>&copy; 2024 IQ Resume. Built with ❤️ using Modern Web Technologies</p>
             </div>
         </div>
     </footer>
